refactor: :art: improve swagger docs
